compile with def for debug
If I have to debug with raise() for example, it will only work if I compile with VSCode.
This way I can define it with pre-processor directives without readjusting the code each time.

Signed-off-by: Peppe289 <gsperanza204@gmail.com>

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,6 +20,11 @@
                 "-Wall", // enable full warning
                 "-Wextra", // enable extra warning
                 "-fstack-usage", // take info of stack usage
+                /*
+                 * Macro for compiler as debug with GDB.
+                 * This help for define preprocessor directive.
+                 */
+                "-DGDB_DEBUG_VSC",
                 "${file}", // current file
                 "-o",
                 "a.out"
