--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
         "item_str": "c",
         "item_int": "c",
         "item_song": "c",
-        "main": "c"
+        "main": "c",
+        "string.h": "c"
     },
     "C_Cpp.errorSquiggles": "enabled",
     "C_Cpp.default.cStandard": "gnu23",
